--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,20 +51,6 @@ services:
       - type: tmpfs
         target: /var/lib/postgresql/data
 
-  ### PostgreSQL for Email
-  email-db:
-    image: postgres:16
-    container_name: email-db
-    environment:
-      POSTGRES_DB: email_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgreuser
-    ports:
-      - "5436:5432"
-    volumes:
-      - type: tmpfs
-        target: /var/lib/postgresql/data
-
   ### Kafka + Zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
@@ -102,7 +88,9 @@ services:
       dockerfile: gateway-service/Dockerfile
     container_name: gateway-service
     ports:
-      - "8080:8080"
+     - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - gateway-db
       - service-registry
@@ -113,6 +101,8 @@ services:
       context: .
       dockerfile: order-service/Dockerfile
     container_name: order-service
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - order-db
       - kafka
@@ -124,6 +114,8 @@ services:
       context: .
       dockerfile: stock-service/Dockerfile
     container_name: stock-service
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - stock-db
       - kafka
@@ -135,7 +127,8 @@ services:
       context: .
       dockerfile: email-service/Dockerfile
     container_name: email-service
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
-      - email-db
       - kafka
       - service-registry
